# faers_ssri_signal_detection

./: 01_data_collection.py  02_eda.py  03_signal_detection.py  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: background_totals.csv  ssri_reaction_counts.csv  ssri_totals.csv
outputs/: signal_detection_results.csv
