[project]
name = "faers-ssri-signal-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.8.3",
    "networkx==3.2.1",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "plotly==6.3.0",
    "pyvis==0.3.2",
    "requests==2.31.0",
    "scipy==1.17.0",
    "seaborn==0.13.2",
    "streamlit==1.53.1",
]
